@@ -1,17 +1,30 @@
 package store.novabook.store.book.service;
 
-import java.util.ArrayList;
+import java.io.File;
+import java.io.IOException;
+import java.io.InputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.io.FileSystemResource;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import store.novabook.store.book.dto.CreateBookRequest;
 import store.novabook.store.book.dto.CreateBookResponse;
 import store.novabook.store.book.dto.GetBookAllResponse;
@@ -27,7 +40,14 @@ import store.novabook.store.category.entity.BookCategory;
 import store.novabook.store.category.entity.Category;
 import store.novabook.store.category.repository.BookCategoryRepository;
 import store.novabook.store.category.repository.CategoryRepository;
+import store.novabook.store.category.service.CategoryService;
 import store.novabook.store.common.exception.EntityNotFoundException;
+import store.novabook.store.common.exception.FailedCreateBookException;
+import store.novabook.store.common.image.NHNCloudClient;
+import store.novabook.store.image.entity.BookImage;
+import store.novabook.store.image.entity.Image;
+import store.novabook.store.image.repository.BookImageRepository;
+import store.novabook.store.image.repository.ImageRepository;
 import store.novabook.store.tag.entity.BookTag;
 import store.novabook.store.tag.entity.Tag;
 import store.novabook.store.tag.repository.BookTagRepository;
@@ -36,6 +56,7 @@ import store.novabook.store.tag.repository.TagRepository;
 @Service
 @RequiredArgsConstructor
 @Transactional
+@Slf4j
 public class BookService {
 	private final BookRepository bookRepository;
 	private final BookStatusRepository bookStatusRepository;
@@ -45,6 +66,25 @@ public class BookService {
 	private final TagRepository tagRepository;
 	private final BookCategoryRepository bookCategoryRepository;
 	private final BookQueryRepository queryRepository;
+	private final ImageRepository imageRepository;
+	private final BookImageRepository bookImageRepository;
+	private final CategoryService categoryService;
+	private final NHNCloudClient nhnCloudClient;
+
+	@Value("${nhn.cloud.imageManager.endpointUrl}")
+	private String endpointUrl;
+
+	@Value("${nhn.cloud.imageManager.accessKey}")
+	private String accessKey;
+
+	@Value("${nhn.cloud.imageManager.secretKey}")
+	private String secretKey;
+
+	@Value("${nhn.cloud.imageManager.bucketName}")
+	private String bucketName;
+
+	@Value("${nhn.cloud.imageManager.localStorage}")
+	private String localStorage;
 
 	public CreateBookResponse create(CreateBookRequest request) {
 		BookStatus bookStatus = bookStatusRepository.findById(request.bookStatusId())
@@ -55,37 +95,47 @@ public class BookService {
 		List<Tag> tags = tagRepository.findByIdIn(request.tags());
 		List<BookTag> bookTags = tags.stream()
 			.map(tag -> new BookTag(book, tag))
-			.collect(Collectors.toList());
+			.toList();
 		bookTagRepository.saveAll(bookTags);
 
-		List<BookCategory> bookCategories = new ArrayList<>();
-		for (Map.Entry<Integer, Long> entry : request.category().entrySet()) {
-			Integer depth = entry.getKey();
-			Long categoryId = entry.getValue();
+		Category category = categoryRepository.findById(request.categoryId())
+			.orElseThrow(() -> new EntityNotFoundException(Category.class, request.categoryId()));
+		BookCategory bookCategories = BookCategory.of(book, category);
+		bookCategoryRepository.save(bookCategories);
 
-			Category category = categoryRepository.findById(categoryId)
-				.orElseThrow(() -> new EntityNotFoundException(Category.class, categoryId));
-			BookCategory bookCategory = new BookCategory(book, category);
-			bookCategories.add(bookCategory);
+		String imageUrl = request.image();
+		String fileName = imageUrl.substring(imageUrl.lastIndexOf("/") + 1);
+		String outputFilePath = localStorage+fileName;
+		try(InputStream in = new URI(imageUrl).toURL().openStream()){
+			Path imagePath = Paths.get(outputFilePath);
+			Files.copy(in, imagePath);
+		} catch (IOException | URISyntaxException e) {
+			Path imagePath = Paths.get(outputFilePath);
+			try {
+				Files.delete(imagePath);
+			} catch (IOException ex) {
+				log.error("Failed to delete file {}", outputFilePath);
+			}
+			log.error(e.getMessage());
+			throw new FailedCreateBookException();
 		}
-		bookCategoryRepository.saveAll(bookCategories);
+
+		String nhnUrl =  uploadImage( accessKey,  secretKey, bucketName + fileName, false, outputFilePath);
+
+
+		Image image = imageRepository.save(new Image(nhnUrl));
+		bookImageRepository.save(BookImage.of(book, image));
 
 		return new CreateBookResponse(book.getId());
 	}
+
 	@Transactional(readOnly = true)
 	public GetBookResponse getBook(Long id) {
-		// Book book = bookRepository.findById(id)
-		// 	.orElseThrow(() -> new EntityNotFoundException(Book.class, id));
-		//
-		// List<BookTag> bookTags = bookTagRepository.findAllByBookId(book.getId());
-		// List<BookCategory> bookCategories = bookCategoryRepository.findAllByBookId(book.getId());
-		//
-		// int likes = likesRepository.countByBookId(book.getId());
-		//
-		// return GetBookResponse.fromEntity(book, bookTags, bookCategories, likes);
 		GetBookResponse getBookResponse = queryRepository.getBook(id);
+		getBookResponse.image();
 		return getBookResponse;
 	}
+
 	@Transactional(readOnly = true)
 	public Page<GetBookAllResponse> getBookAll(Pageable pageable) {
 		Page<Book> books = bookRepository.findAll(pageable);
@@ -111,5 +161,29 @@ public class BookService {
 		Book book = bookRepository.findById(id)
 			.orElseThrow(() -> new EntityNotFoundException(Book.class, id));
 		book.updateBookStatus(bookStatus);
+	}
+
+
+	public String uploadImage(String appKey, String secretKey, String path, boolean overwrite, String localFilePath) {
+
+		try {
+			File file = new File(localFilePath);
+			FileSystemResource resource = new FileSystemResource(file);
+
+			ResponseEntity<String> response = nhnCloudClient.uploadImage(appKey, path, overwrite, secretKey, true, resource);
+			String jsonResponse = response.getBody();
+
+			// JSON 응답을 파싱하여 URL 필드를 추출
+			ObjectMapper objectMapper = new ObjectMapper();
+
+			Map<String, Object> responseMap = objectMapper.readValue(jsonResponse, Map.class);
+
+			HashMap<String, Object> map = (HashMap<String, Object>) responseMap.get("file");
+
+			return (String)map.get("url");
+
+		} catch (Exception e) {
+			throw new FailedCreateBookException();
+		}
 	}
 }
